Refactor udistrital/sga_documentacion#95 udistrital/sga_documentacion#90
Refactor para ajustar a la revision de estandar REST
